<resources>
    <string name="app_name">Assignment_2</string>
    <string name="text_name">Name</string>
    <string name="welcome">Welcome</string>
    <string name="text_email">Email</string>
    <string name="text_pass">Password</string>
    <string name="text_confirm_pass">Confirm Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
</resources>