<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".registration"
    android:padding="20dp"
    android:gravity="center"
    android:id="@+id/registration_layout">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:text="Sign up"
        android:textColor="@color/purple_500"
        android:textSize="24sp"
        android:layout_marginBottom="30dp"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginVertical="8dp"
        android:hint="@string/text_name"
        app:startIconDrawable="@drawable/ic_baseline_person_24"
        app:startIconTint="@color/purple_500">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginVertical="8dp"
        android:hint="@string/text_email"
        app:startIconDrawable="@drawable/ic_baseline_email_24"
        app:startIconTint="@color/purple_500">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginVertical="8dp"
        android:hint="@string/text_pass"
        app:passwordToggleEnabled="true"
        app:startIconDrawable="@drawable/ic_baseline_security_24"
        app:startIconTint="@color/purple_500"
        app:passwordToggleTint="@color/purple_500"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirm_password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginVertical="8dp"
        android:hint="@string/text_confirm_pass"
        app:passwordToggleEnabled="true"
        app:startIconDrawable="@drawable/ic_baseline_security_24"
        app:startIconTint="@color/purple_500"
        app:passwordToggleTint="@color/purple_500"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confirm_password_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_marginVertical="40dp"
        android:background="@drawable/shape_btn"
        android:id="@+id/btn_register"
        android:padding="20dp"
        android:textColor="@color/white"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Already an user? "
        android:textSize="14sp"
        android:textStyle="italic"
        android:textColor="@color/black"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="navToLogin"
        android:text="Login"
        android:textSize="16sp"
        android:textStyle="italic"
        android:textColor="@color/purple_500" />
</LinearLayout>